2.1.0/_sources/gallery/userdemo/annotate_simple_coord03.rst.txt


.. _sphx_glr_gallery_userdemo_annotate_simple_coord03.py:


=======================
Annotate Simple Coord03
=======================





.. image:: /gallery/userdemo/images/sphx_glr_annotate_simple_coord03_001.png
    :align: center





.. code-block:: python


    import matplotlib.pyplot as plt
    from matplotlib.text import OffsetFrom


    fig, ax = plt.subplots(figsize=(3, 2))
    an1 = ax.annotate("Test 1", xy=(0.5, 0.5), xycoords="data",
                      va="center", ha="center",
                      bbox=dict(boxstyle="round", fc="w"))

    offset_from = OffsetFrom(an1, (0.5, 0))
    an2 = ax.annotate("Test 2", xy=(0.1, 0.1), xycoords="data",
                      xytext=(0, -10), textcoords=offset_from,
                      # xytext is offset points from "xy=(0.5, 0), xycoords=an1"
                      va="top", ha="center",
                      bbox=dict(boxstyle="round", fc="w"),
                      arrowprops=dict(arrowstyle="->"))
    plt.show()

**Total running time of the script:** ( 0 minutes  0.017 seconds)



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

     :download:`Download Python source code: annotate_simple_coord03.py <annotate_simple_coord03.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: annotate_simple_coord03.ipynb <annotate_simple_coord03.ipynb>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
