2.2.4/_sources/gallery/userdemo/annotate_simple_coord03.rst.txt
.. note::
    :class: sphx-glr-download-link-note

    Click :ref:`here <sphx_glr_download_gallery_userdemo_annotate_simple_coord03.py>` to download the full example code
.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_userdemo_annotate_simple_coord03.py:


=======================
Annotate Simple Coord03
=======================





.. image:: /gallery/userdemo/images/sphx_glr_annotate_simple_coord03_001.png
    :class: sphx-glr-single-img





.. code-block:: python


    import matplotlib.pyplot as plt
    from matplotlib.text import OffsetFrom


    fig, ax = plt.subplots(figsize=(3, 2))
    an1 = ax.annotate("Test 1", xy=(0.5, 0.5), xycoords="data",
                      va="center", ha="center",
                      bbox=dict(boxstyle="round", fc="w"))

    offset_from = OffsetFrom(an1, (0.5, 0))
    an2 = ax.annotate("Test 2", xy=(0.1, 0.1), xycoords="data",
                      xytext=(0, -10), textcoords=offset_from,
                      # xytext is offset points from "xy=(0.5, 0), xycoords=an1"
                      va="top", ha="center",
                      bbox=dict(boxstyle="round", fc="w"),
                      arrowprops=dict(arrowstyle="->"))
    plt.show()


.. _sphx_glr_download_gallery_userdemo_annotate_simple_coord03.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download

     :download:`Download Python source code: annotate_simple_coord03.py <annotate_simple_coord03.py>`



  .. container:: sphx-glr-download

     :download:`Download Jupyter notebook: annotate_simple_coord03.ipynb <annotate_simple_coord03.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
